[Bugfix] Fixed #4: Moved .ov class beneath general styles to fix an issue with overflow being overwritten

--- a/src/Resources/public/framework/scss/basics/_contao.scss
+++ b/src/Resources/public/framework/scss/basics/_contao.scss
@@ -2,14 +2,6 @@
   overflow:hidden;
 }
 
-.ov{
-  overflow: visible;
-
-  > .inside {
-    overflow: visible;
-  }
-}
-
 .clear, #clear {
   height:0.1px;
   font-size:0.1px;
